--- a/manuscript/lecture1.Rmd
+++ b/manuscript/lecture1.Rmd
@@ -71,7 +71,7 @@ Others are highly perishable or otherwise non-storable:
 
 # Storable and Nonstorable Commodities
 - implications on market prices. 
-- With storable commodities, pices in one period must be related to prices in another period because those holding stocks of the commodity will constantly calculating their expectation of when best to sell - now or later. 
+- With storable commodities, prices in one period must be related to prices in another period because those holding stocks of the commodity will constantly calculating their expectation of when best to sell - now or later. 
 - With non-storable commodities, prices can only be affected by the current supply of the commodity, since past supply cannot be brought forward. 
     
     
