lots of catch up

--- a/manuscript/PriceAnalysis.bib
+++ b/manuscript/PriceAnalysis.bib
@@ -19,3 +19,10 @@ publisher={CreateSpace Independent Publishing Platform}
   edition={farmdoc daily (5):23},
   month={February}
 }
+
+@book{history2007Nass,
+  title={Safeguarding America's Agricultural Statistics},
+  author={Allen, Richard},
+  year={2007},
+  publisher={U.S. Department of Agriculture, National Agricultural Statistics Service}
+}
