--- a/manuscript/lecture4.Rmd
+++ b/manuscript/lecture4.Rmd
@@ -1,13 +1,15 @@
 ---
 title: "ACE 427 Commodity Price Analysis and Forecasting"
 author: "Instructor: Mindy L. Mallory,  TA: Quanbiao Shang"
-output: slidy_presentation
+output: ioslides
 theme: uulm
 ---
 
 # Introduction
 
-Some of the USDA reports contain very sensitive market information causing market prices to adjust rapidly to new information about supply and demand. Access to the contents of a market sensitive report would result in the ability to perform 'insider trading' and obtain nearly risk-less profits. This activity is illegal, and the USDA's NASS prepares the reports under lock-down conditions where during the process of finalizing estimates of the report's content, officials are locked in a secure area and not allowed to leave until the report is made known to the public. 
+- Some of the USDA reports contain very sensitive market information causing market prices to adjust rapidly to new information about supply and demand. 
+- Access to the contents of a market sensitive report would result in the ability to perform 'insider trading' and obtain nearly risk-less profits. 
+- This activity is illegal, and the USDA's NASS prepares the reports under lock-down conditions where during the process of finalizing estimates of the report's content, officials are locked in a secure area and not allowed to leave until the report is made known to the public. 
 
 This chapter explores some history related to the compilation and release of USDA reports, discusses how release times have evolved over time, indicates some particular report releases that are more likely to cause large and rapid price adjustments, and demonstrates this with a few charts of transactions prices pre- and post-release of particularly interesting recent days. 
 
@@ -33,11 +35,11 @@ Timing of report releases has important implications for the market reaction as 
 
 ![Figure 2: Timeline of Report Release Times](images\NASS_release_timeline.png)
 
-Prior to 1994 most market sensitive USDA reports were released at 3pm EST. This made sense from the USDA workflow perspective because it allowed the lock-down to be enacted during normal working hours, minimizing disruption of the analysts' regular lives. By the early 90's releasing the report at this time became unpopular with market participants. By releasing the report late in the afternoon in the U.S. futures markets in other parts of the world could trade the USDA numbers overnight before the U.S. market had a chance to react. Therefore price discovery after reports was essentially shifted from Chicago to other major exchanges across the world. 
+- Prior to 1994 most market sensitive USDA reports were released at 3pm EST. This made sense from the USDA workflow perspective because it allowed the lock-down to be enacted during normal working hours, minimizing disruption of the analysts' regular lives. By the early 90's releasing the report at this time became unpopular with market participants. By releasing the report late in the afternoon in the U.S. futures markets in other parts of the world could trade the USDA numbers overnight before the U.S. market had a chance to react. Therefore price discovery after reports was essentially shifted from Chicago to other major exchanges across the world. 
 
-In May of 1994, the USDA shifted the release time to 8:30am EST. This meant the report was released during regular business hours in the U.S. and just one hour before trading begins on the U.S. futures exchange. While clearly preferable to market participants in the U.S. this moved the USDA's lockup time to overnight hours [@history2007Nass]. 
+- In May of 1994, the USDA shifted the release time to 8:30am EST. This meant the report was released during regular business hours in the U.S. and just one hour before trading begins on the U.S. futures exchange. While clearly preferable to market participants in the U.S. this moved the USDA's lockup time to overnight hours [@history2007Nass]. 
 
-By 2011, presumably due to the ability to trade electronically with high speed, there was a desire for the futures market to be open and actively trading at the time USDA reports were released. In this case, the futures exchange acted first, expanding trading hours to an earlier market open. Eventually, since futures market participants wanted it, and because came with the added benefit of moving the beginning of the lockup period from late night to early morning, the USDA began releasing most reports at 12pm EST on January 11, 2013.  
+- By 2011, presumably due to the ability to trade electronically with high speed, there was a desire for the futures market to be open and actively trading at the time USDA reports were released. In this case, the futures exchange acted first, expanding trading hours to an earlier market open. Eventually, since futures market participants wanted it, and because came with the added benefit of moving the beginning of the lockup period from late night to early morning, the USDA began releasing most reports at 12pm EST on January 11, 2013.  
 
 
 # Market Reactions to USDA Reports in Recent History
@@ -55,54 +57,123 @@ Market prices react strongly to USDA reports when the reports inject significant
 
 : Table 1: Reports most likely to cause significant movements in market price
 
+
+# Market Reactions to USDA Reports in Recent History
+
+| Report | Dates | Reason |
+|--------|-------|--------|
+| Grain Stocks| Quarterly | Information about scarcity or surplus of supplies |
+| Prospective Plantings | End of March | Acreage and therefore production estimates |
+| Planted Acres | End of June | Acreage and therefore production estimates |
+| WASDE | October | Some years the Oct report will contain significant revisions from previous estimate |
+| WASDE | January | Final production estimate for the preceding harvest. Sometimes includes and unanticipated revision |
+| Crop Progress Report | Weekly | Condition estimates. Only moves market prices if significant deterioration associated with a drought or flood occurs |
+
+: Table 1: Reports most likely to cause significant movements in market price
+
 Grain stocks  
 
 :    Estimates only come out quarterly. Since the information about whether we have a scarcity or surplus is a primary driver of price, and since we only get this report four times per year, the stocks estimate can cause significant adjustments in price. 
+
+# Market Reactions to USDA Reports in Recent History
+
+| Report | Dates | Reason |
+|--------|-------|--------|
+| Grain Stocks| Quarterly | Information about scarcity or surplus of supplies |
+| Prospective Plantings | End of March | Acreage and therefore production estimates |
+| Planted Acres | End of June | Acreage and therefore production estimates |
+| WASDE | October | Some years the Oct report will contain significant revisions from previous estimate |
+| WASDE | January | Final production estimate for the preceding harvest. Sometimes includes and unanticipated revision |
+| Crop Progress Report | Weekly | Condition estimates. Only moves market prices if significant deterioration associated with a drought or flood occurs |
+
+: Table 1: Reports most likely to cause significant movements in market price
 
 Prospective Planting and Planted Acres
 
 :    Reports give a baseline expectation about production for the coming marketing year. Deviations from expectations or recent history will cause rapid adjustments in price. 
 
+# Market Reactions to USDA Reports in Recent History
+
+| Report | Dates | Reason |
+|--------|-------|--------|
+| Grain Stocks| Quarterly | Information about scarcity or surplus of supplies |
+| Prospective Plantings | End of March | Acreage and therefore production estimates |
+| Planted Acres | End of June | Acreage and therefore production estimates |
+| WASDE | October | Some years the Oct report will contain significant revisions from previous estimate |
+| WASDE | January | Final production estimate for the preceding harvest. Sometimes includes and unanticipated revision |
+| Crop Progress Report | Weekly | Condition estimates. Only moves market prices if significant deterioration associated with a drought or flood occurs |
+
+: Table 1: Reports most likely to cause significant movements in market price
+
 WASDE
 
 :    The reports in October and January are relatively more likely to cause rapid price adjustments than other months because in October the yield estimates tend to become more precise and can involve significant revisions from the previous month's estimate. Similarly, January report contains finalized estimates of the crop production and in some cases will involve unexpected revisions from previous estimates. 
+
+# Market Reactions to USDA Reports in Recent History
+
+| Report | Dates | Reason |
+|--------|-------|--------|
+| Grain Stocks| Quarterly | Information about scarcity or surplus of supplies |
+| Prospective Plantings | End of March | Acreage and therefore production estimates |
+| Planted Acres | End of June | Acreage and therefore production estimates |
+| WASDE | October | Some years the Oct report will contain significant revisions from previous estimate |
+| WASDE | January | Final production estimate for the preceding harvest. Sometimes includes and unanticipated revision |
+| Crop Progress Report | Weekly | Condition estimates. Only moves market prices if significant deterioration associated with a drought or flood occurs |
+
+: Table 1: Reports most likely to cause significant movements in market price
 
 Crop Progress
 
 :    These reports generally only move markets when crop conditions are deteriorating rapidly due to drought or excess moisture. During years with more typical weather, this report does not affect markets much week-to-week. 
 
-## Some Examples of Recent Big Market Reactions
+# Some Examples of Recent Big Market Reactions
 
 Using the Best Bid Best Offer database from the CMEGroup's [DataMine](http://www.cmegroup.com/market-data/datamine-historical-data/) we can examine historical intraday transaction prices (like what is available streaming in real-time from Yahoo Finance or other sources). These data are time-stamped to the second and allow the most accurate and fine scale picture of futures market trading tick-by-tick.
 
-Three examples come from the 2010 marketing year. 
+# Some Examples of Recent Big Market Reactions
 
-The June 30 Planted Acres report resulted in the market opening (at 8:30am EST) 15 cents higher than it closed the overnight trade just two hours earlier. Ultimately it closed the day trading session 3.54 cents/bushel - 7.5% or 25 cents higher than the most recent pre-report price. Two put that into perspective, 25 cents that is an increase in value of one futures contract of $1,250, since future contracts are specified for a quantity of 5,000 bushels. 
+The **June 30 2010 Planted Acres report** resulted in the market opening (at 8:30am EST) 15 cents higher than it closed the overnight trade just two hours earlier. Ultimately it closed the day trading session 3.54 cents/bushel - 7.5% or 25 cents higher than the most recent pre-report price. Two put that into perspective, 25 cents that is an increase in value of one futures contract of $1,250, since future contracts are specified for a quantity of 5,000 bushels. 
 
 ![Figure 2: Price of July 2010 corn on June 30, 2010 before and after the release of Planted Acres Report.](images\100630.png)
 
 In the top panel of Figure 2 you can see that the time stamps indicate those are transactions occurring in the overnight electronic market. There is a break in the morning prior to 9:30 CST when trading begins in the daytime session. It is in this period that the Planted Acres report is released. The bottom panel only displays the daytime session, so that you can see the trading action more clearly. Between 9:30am and about 10:15 the market trades in a 10 cent range. 
 
+# Some Examples of Recent Big Market Reactions
 
-The Oct 8th WASDE report caused the market to open limit up. The exchange sets the maximum fluctuation a futures price can trade in a given day. The value of the limit can change at the discretion of the exchange with some advance notice. The report indicated a sharp drop in forecasted yield for corn. This resulted in the ending stocks number for the 2010/2011 marketing year forecast below 1 billion bushels with a very low stocks to use ratio as well. The market reaction is show below in Figure 3. 
+The **Oct 8th 2010 WASDE report** caused the market to open limit up. The exchange sets the maximum fluctuation a futures price can trade in a given day. The value of the limit can change at the discretion of the exchange with some advance notice. The report indicated a sharp drop in forecasted yield for corn. This resulted in the ending stocks number for the 2010/2011 marketing year forecast below 1 billion bushels with a very low stocks to use ratio as well. The market reaction is show below in Figure 3. 
 
 ![Figure 3: Price of December 2010 corn on October 8th, 2010 before and after the release of the WASDE Report.](images\101008.png)
 
 The flat line during the daytime trading session is apparent, resulting from prices being locked at the limit during the entire trading day. 
 
-The next example is December 9th, 2010, the release day of the December WASDE report. 
+# Some Examples of Recent Big Market Reactions
+
+The next example is **December 9th, 2010**, the release day of the **December WASDE report**. 
 
 ![Figure 4:  Price of March 2011 corn on December 9th, 2010 before and after the release of the WASDE Report.](images\101209.png)
 
 On this day the market opened 10 cents higher, or 1.8%. On a non-report day, this would be a large price move. However, for a report day, it seems like a small price adjustment. 
 
-Figure 5, below, is the price action on the March 31st, 2011, the day the Prospective Plantings report was released. 
+# Some Examples of Recent Big Market Reactions
+
+Figure 5, below, is the price action on the **March 31st, 2011**, the day the **Prospective Plantings and Grain Stocks** reports were released. 
 
 ![Figure 5:  Price of May 2011 corn on March 31st, 2011 before and after the release of the Planted Acres Report.](images\110331.png)
 
 This report indicated that corn acreage was to be higher than previously expected, but corn stocks were lower than expected. The stocks number dominated the price direction strongly and the market traded limit up on this day as well.  
 
-# Conclusions
+# Tomorrow, September 11 WASDE Report Released 
 
-This chapter reviewed the history of report released by the USDA. We noted a data leak in 1905 led the agency to consider security from an early date - a important component of report production that persists to this day. We also learned that the Prospective Plantings, Planted Acreage, October WASDE, January WASDE, and Grain Stocks reports are the most likely to produce rapid price adjustments in the market. Some specific examples were given, and depicted through charts of transaction prices. 
+[WASDE Report](http://www.usda.gov/oce/commodity/wasde/)
+
+**Assignment 2**
+
+Comment on the results from the September WASDE report for corn and soybeans. Note any categories that experienced unexpected changes. Note the following categories as particularly important: Yield, Harvested Acres (and thus production), and exports. 
+
+Obtain the WASDE in excel format from the USDA website above. Copy and paste the corn table and the soybean table into your assignment document (probably a Microsoft Word document). 
+
+**Due Monday Sept 14, at 11:30pm**
+
+Note that in your final group projects you are required to forecast the November WASDE report. This assignment will get you accustomed to obtaining the WASDE report, examining its contents, and digest its contents. The exercise will make your Group Final Projects go more smoothly. 
+
 
